data/all_generated_tests/raw_wast_tests/return_IncorrectConditionEvaluation_2869.wast
;; 8. **Conditional Branching with Asynchronous Return Path**:    - Design a function incorporating asynchronous operations where conditional branches affect the return path. Validate the return’s behavior when conditions modify stack values asynchronously.    - **Reasoning**: Tests for potential discrepancies in conditional evaluations, especially in asynchronous contexts, ensuring the return instruction’s correctness.

(assert_invalid
  (module
    (func $async-branch-on-return (param i32) (result i32)
      (local i32)
      (block (br_if 0 (local.get 0)))
      (drop (local.tee 0 (return)))
      (i32.const 0)
    )
  )
  "type mismatch"
)